--- a/ALPAConfigs.yml
+++ b/ALPAConfigs.yml
@@ -1,8 +1,8 @@
 painting:
-  importFilesPath: C:\Users
-  importPaintingPath: C:\Users
-  wildCard: '{name}.png;{name}_dec.png'
+  importFilesPath: D:\painting_old
+  importPaintingPath: D:\拆包资源\AzurLane\舰船相关\立绘\cache
+  wildCard: '*{name}.png;*{name}_dec.png'
 paintingface:
-  importFilesPath: C:\Users
-  importFacePath: C:\Users
+  importFilesPath: D:\AL_cache
+  importFacePath: D:\拆包资源\AzurLane\舰船相关\立绘\PaintingFace
   wildCard: 0.png;{name}_head.png
